--- a/.github/workflows/calendar.yml
+++ b/.github/workflows/calendar.yml
@@ -1,6 +1,11 @@
 name: Full-year calendar
 on:
-  push: {branches: ["main"]}
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
+  workflow_dispatch:
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
