--- a/.github/workflows/calendar.yml
+++ b/.github/workflows/calendar.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: SleepyLGod/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
           token: ${{ secrets.METRICS_TOKEN }}
