--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: SleepyLGod/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.skyline.city.svg
           token: NOT_NEEDED
