--- a/.github/workflows/calendar.yml
+++ b/.github/workflows/calendar.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Metrics embed
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
